# mail-client

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mail-client.sln  mail-client.vcxproj  mail-client.vcxproj.filters  maintest.cpp
email/: Address.cpp  Address.h  Client.cpp  Client.h  DateTime.cpp  DateTime.h  Message.cpp  Message.h  email.hpp
lib/: libcurl-license.txt  libcurl_imp.exp  libcurl_imp.lib
test/: test1.cpp
